--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.1",
+    "dotenv": "^16.3.1",
     "langchain": "^0.0.210"
   }
 }
