--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "langchain": "^0.0.210"
   }
 }
