--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@supabase/supabase-js": "^2.39.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "langchain": "^0.0.210"
   }
 }
